# fbs-model-prototype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
data/: btc_options_data.json
src/model/: Makefile  fractional_bs_model.cpp  fractional_bs_model.h  fractional_bs_model.i  fractional_bs_model.py  fractional_bs_model_wrap.cxx
src/testing/: main.py
